fix: sidebar issues on responsiveness and bottom-nav z-index.

--- a/frontend/esmis/src/app/layout/main-layout.scss
+++ b/frontend/esmis/src/app/layout/main-layout.scss
@@ -4,15 +4,7 @@ main {
   @include page-layout(true);
 }
 
-@media (min-width: 768px) and (max-width: 1024px) {
-  main {
-    margin-left: 60px;
-    padding: 20px 20px;
-    padding-top: calc(4rem + 20px);
-  }
-}
-
-@media (max-width: 767px) {
+@media (max-width: 1024px) {
   main {
     margin-left: 0;
     padding-top: calc(4rem + 16px);
